--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1671,11 +1671,14 @@ input, select, textarea {
 
 .work-div-img {
   width: 50%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .work-div-img img {
-  width: 100%;
-  height: 280px;
+  width: 59%;
+  height: 200px;
 }
 
 .work-div-p {
