--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,13 +11,11 @@
 .article-nav {
   list-style: none;
   display: flex;
-  position: relative;
-  bottom: 55px;
   margin-bottom: 0px;
 }
 
 .article-nav li {
-  padding: 10px;
+  padding-right: 15px;
 }
 
 .article-nav li:hover {
@@ -754,11 +752,9 @@ input, select, textarea {
 	ul {
 		list-style: disc;
 		margin: 0 0 2rem 0;
-		padding-left: 1em;
 	}
 
 		ul li {
-			padding-left: 0.5em;
 		}
 
 		ul.alt {
@@ -1561,7 +1557,7 @@ input, select, textarea {
 			-webkit-transition: opacity 0.325s ease-in-out, -webkit-transform 0.325s ease-in-out;
 			-ms-transition: opacity 0.325s ease-in-out, -ms-transform 0.325s ease-in-out;
 			transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
-			padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
+			padding: .8rem 2.5rem 1.5rem 2.5rem ;
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
@@ -1718,4 +1714,10 @@ input, select, textarea {
 iframe {
   width: 100%;
   height: 500px;
+}
+
+.nav-div {
+  bottom: 55px;
+  display: flex;
+  justify-content: space-between;
 }
