--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,8 +14,24 @@
   margin-bottom: 0px;
 }
 
+@media only screen and (max-width: 600px) {
+  .article-nav {
+    margin-top: 7px;
+    width: 100%
+  }
+  h2.major {
+    margin: 0px;
+    width: 100%;
+    text-align: center;
+  }
+  div.nav-div {
+    display: block;
+  }
+}
+
 .article-nav li {
   padding-right: 15px;
+  z-index: 100;
 }
 
 .article-nav li:hover {
